// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
    provider = "prisma-client-js"
}

generator dbml {
    provider = "prisma-dbml-generator"
}

datasource db {
    provider = "sqlite"
    url      = env("DATABASE_URL")
}

model User {
    id             Int     @id @default(autoincrement())
    firstName      String
    lastName       String
    email          String  @unique
    employeeNumber String
    orders         Order[]
}

model HoodieVariant {
    id                Int                 @id @default(autoincrement())
    imagePath         String?
    colorId           Int
    Color             Color               @relation(fields: [colorId], references: [id], onDelete: Cascade)
    hoodieVariantSize HoodieVariantSize[]
}

model Size {
    id                Int                 @id @default(autoincrement())
    name              String              @unique
    hoodieVariantSize HoodieVariantSize[]
}

model HoodieVariantSize {
    hoodieVariantId Int
    sizeId          Int
    HoodieVariant   HoodieVariant @relation(fields: [hoodieVariantId], references: [id], onDelete: Cascade)
    Size            Size          @relation(fields: [sizeId], references: [id], onDelete: Cascade)
    Order           Order[]

    @@id([hoodieVariantId, sizeId])
}

model Color {
    id       Int             @id @default(autoincrement())
    name     String          @unique
    code     String
    variants HoodieVariant[]
}

model Order {
    id                Int               @id @default(autoincrement())
    user              User              @relation(fields: [userId], references: [id], onDelete: Cascade)
    userId            Int
    hoodieVariantSize HoodieVariantSize @relation(fields: [hoodieVariantId, sizeId], references: [hoodieVariantId, sizeId])
    hoodieVariantId   Int
    sizeId            Int
    quantity          Int
    location          Location          @relation(fields: [locationId], references: [id])
    locationId        Int
    createdAt         DateTime          @default(now())
    StickColor        StickColor        @relation(fields: [stickColorId], references: [id])
    stickColorId      Int
}

model StickColor {
    id    Int     @id @default(autoincrement())
    name  String  @unique
    order Order[]
}

model Location {
    id    Int     @id @default(autoincrement())
    name  String  @unique
    order Order[]
}
